--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3001
-NODE_ENV=development
+NODE_ENV=production
 FRONTEND_URL=http://www.alzeta.site
 AI_MODEL=llama-3.3-70b-versatile
 GROQ_API_KEY=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
