--- a/deploy/backend/package.json
+++ b/deploy/backend/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "zeta-ai-fullstack",
+  "name": "zeta-ai-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "description": "Zeta AI Backend Server",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.5"
   },
   "engines": {
