--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,13 @@
   "description": "Zeta AI Backend Server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "axios": "^1.6.2",
+    "cors": "^2.8.6",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5"
   },
   "engines": {
