--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "multer": "^2.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
