--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,37 @@
-.env 
-node_modules/ 
+# Environment variables
+.env
+*.env
+backend/.env
+frontend/.env
+deploy/backend/.env
+frontend/env
+
+# Node modules
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# Build files
+frontend/dist/
+frontend/build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+.cache/
