fix: Ensure all enhanced tools are deployed

--- a/backend/web.config
+++ b/backend/web.config
@@ -3,8 +3,8 @@
   <system.webServer>
     
     <handlers>
-      <add name="iisnode" path="backend/app.js" verb="*" modules="iisnode"/>
-    </handlers>
+  <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+</handlers>
 
     <rewrite>
       <rules>
